# polybot

./: .coverage  .env.example  .gitignore  README.md  deploy.sh  polybot.service  pyproject.toml
config/: ai.polybot.trader.plist
polybot/: __main__.py
polybot/analysis/: calibration.py  ensemble.py  espn_client.py  gemini_client.py  odds_client.py  prescore.py  prompts.py  quant.py  research.py  verifier_cache.py  win_probability.py
polybot/core/: config.py  engine.py
polybot/dashboard/: app.py
polybot/db/: connection.py  mm_schema.sql  schema.sql
scripts/: derive_creds.py  dry_run_sim.py  live_preflight.py  measure_crypto_lag.py  phase0_audit.py  resolve_orphan_trade.py  run_polybot.sh  setup_live_wallet.py
tests/: conftest.py  test_arbitrage.py  test_base_strategy.py  test_calibration.py  test_clob.py  test_config.py  test_correlation_filter.py  test_cross_venue.py  test_daily_report.py  test_dashboard.py  test_early_exit.py  test_edge_decay.py  test_engine.py  test_ensemble.py  test_espn_client.py  test_executor.py  test_fees.py  test_fill_monitor.py  test_filters.py  test_forecast_strategy.py  test_gemini_client.py  test_gemini_grounding.py  test_hit_rate_killswitch.py  test_inventory.py  test_kelly.py  test_kelly_scaler.py  test_learning.py  test_learning_cycle.py  test_live_game.py  test_live_sports.py  test_live_sports_spread.py  test_live_sports_total.py  test_main_lifecycle.py  test_margin_model.py  test_market_maker.py  test_matcher_normalization.py  test_matcher_reweight.py  test_mean_reversion.py  test_notifications.py  test_odds_client.py  (+32 more)
(+98 files in other folders)
