[project]
name = "polybot"
version = "0.1.0"
description = "AI-driven Polymarket trading bot"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=1.0",
    "py-clob-client>=0.18",
    "eth-account>=0.13",
    "web3>=7.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "resend>=2.0",
    "twilio>=9.0",
    "structlog>=24.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
